# C_matrix_math_tool

./: CMakeLists.txt  LICENSE  README.md
doc/: rule.yaml
doc/RD/: matrix_tool_ 要件定義書.md
doc/change/: 簡易版dot_product追加設計.md  簡易版hadamard_product追加設計.md  簡易版mul_matrix追加設計.md
doc/design/: 簡易版matlix_matrix_tool_設計書.md
doc/temp/:  要件定義書テンプレート.md  テスト仕様書テンプレート.md  設計修正テンプレート.md  設計書テンプレート.md  追加設計テンプレート.md
doc/tests/: 簡易版matrix_math_toolテスト仕様書.md  簡易版matrix_subテスト仕様書.md
include/: matrix.h
src/: main  main.c  matrix.c  matrix.h
src/test/: test_main.c  test_matrix.c
src/wrapper/: matrix_tools_wrapper.py  test.py
test/: test.py
wrapper/: MTools.py
